--- a/MyNewService/ImageServiceGUI/Controls/UserControl1.xaml
+++ b/MyNewService/ImageServiceGUI/Controls/UserControl1.xaml
@@ -1,11 +1,12 @@
-﻿<UserControl x:Class="ImageServiceGUI.Controls.Logs"
+﻿<UserControl x:Class="ImageServiceGUI.Controls.UserControl1"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:wpfex2.Controls"
+             xmlns:local="clr-namespace:ImageServiceGUI.Controls"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <DataGrid HorizontalAlignment="Left" Height="85" Margin="283,164,0,0" VerticalAlignment="Top" Width="141"/>
-
+    <Grid>
+            
+    </Grid>
 </UserControl>
