--- a/MyNewService/WebApplication2/Views/Photo/PhotoView.cshtml
+++ b/MyNewService/WebApplication2/Views/Photo/PhotoView.cshtml
@@ -5,25 +5,33 @@
 }
 
 <h2>PhotoView</h2>
-
-<div class="container">
-    <div class="row">
-        <div class="col-sm-6 col-md-4">
-            <div>
-                <img src="@(ViewBag.RootPath + "/" + Model.Year + "/" + Model.Month + "/" + Model.Name)" class="class="img-rounded" alt="photo">
-                <div class="caption">
-                    <form action="DeletePhoto">
-                        <input type="text" name="name" value="@Model.Name" disabled />
-                        <div>
-                            <input type="text" name="month" value="@(Model.Month)" disabled />/<input type="text" name="year" value="@(Model.Year)" disabled />
-                        </div>
-                        <a class="btn btn-default" href="@Url.Action("Index", "Photo")">Go Back</a>
-                        <a class="btn btn-default" href="@Url.Action("PreviewBeforeDelete", "Photo", new { photoName = Model.Name, year = Model.Year, month = Model.Month })">Delete</a>
-                    </form>
+@{ ViewBag.relativeRootPath = (ViewBag.RootPath).Replace(Request.ServerVariables["APPL_PHYSICAL_PATH"], "/");}
+@if (ViewBag.RootPathValid)
+{
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6 col-md-4">
+                <div>
+                    <img src="@(ViewBag.relativeRootPath + "/" + Model.Year + "/" + Model.Month + "/" + Model.Name)" class="class="img-rounded" alt="photo">
+                    <div class="caption">
+                        <form action="DeletePhoto" class="form-group">
+                            <input type="text" name="name" value="@Model.Name" disabled class="form-control"/>
+                            <div>
+                                <input type="text" name="month" value="@(Model.Month)" disabled class="form-control" />/<input type="text" name="year" value="@(Model.Year)" disabled class="form-control"/>
+                            </div>
+                            <a class="btn btn-primary" href="@Url.Action("Index", "Photo")">Go Back</a>
+                            <a class="btn btn-default" href="@Url.Action("PreviewBeforeDelete", "Photo", new { photoName = Model.Name, year = Model.Year, month = Model.Month })">Delete</a>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
+}
+else
+{
+    <br/>
+    <p>root path to gallery invalid, no connection to service</p>
+}
 
 
