--- a/MyNewService/WebApplication2/Views/Photo/PhotoView.cshtml
+++ b/MyNewService/WebApplication2/Views/Photo/PhotoView.cshtml
@@ -14,14 +14,12 @@
                 <div>
                     <img src="@(ViewBag.relativeRootPath + "/" + Model.Year + "/" + Model.Month + "/" + Model.Name)" class="class="img-rounded" alt="photo">
                     <div class="caption">
-                        <form action="DeletePhoto" class="form-group">
-                            <input type="text" name="name" value="@Model.Name" disabled class="form-control"/>
-                            <div>
-                                <input type="text" name="month" value="@(Model.Month)" disabled class="form-control" />/<input type="text" name="year" value="@(Model.Year)" disabled class="form-control"/>
-                            </div>
+                        <div>
+                            <h4>@Model.Name</h4>
+                            <p>@(Model.Month + "/" + Model.Year)</p>
                             <a class="btn btn-primary" href="@Url.Action("Index", "Photo")">Go Back</a>
                             <a class="btn btn-default" href="@Url.Action("PreviewBeforeDelete", "Photo", new { photoName = Model.Name, year = Model.Year, month = Model.Month })">Delete</a>
-                        </form>
+                        </div>
                     </div>
                 </div>
             </div>
